# AtomicButton

./: .gitattributes  .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  index.html  ir3-app.jsx  ir3-audio.js  ir3-components.jsx  ir3.css  soundboard.js  style.css
.github/workflows/: build.yml
Source/: AtomicLookAndFeel.h  AudioEngine.cpp  AudioEngine.h  EditClipComponent.cpp  EditClipComponent.h  KeyboardComponent.cpp  KeyboardComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  SoundSlot.h  VUMeterComponent.cpp  VUMeterComponent.h  WaveformDisplay.cpp  WaveformDisplay.h
legacy-prototype/: index.html  soundboard.js  style.css
